# gnuchess

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-CVS  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  mkinstalldirs
doc/: ChangeLog  INSTALL  README  chess_faq.html
src/: Makefile.am  Makefile.in  atak.c  book.c  book.h  clean  cmd.c  common.h  config.h.in  configure.in  epd.c  eval.c  eval.h  genmove.c  hash.c  hung.c  init.c  inlines.h  input.c  iterate.c  lexpgn.l  main.c  move.c  null.c  output.c  pgn.c  players.c  ponder.c  quiesce.c  random.c  repeat.c  search.c  solve.c  sort.c  swap.c  term1.c  test.c  ttable.c  univ.h  util.c  (+2 more)
test/: README  TwoKnights.epd  endgame.epd  wac.epd  wacfailed.epd
