## Makefile.am for gnuchess. Process with automake to make Makefile.in

bin_PROGRAMS = gnuchess

gnuchess_SOURCES = atak.c book.c cmd.c epd.c eval.c genmove.c hash.c\
 hung.c	init.c iterate.c main.c move.c null.c output.c players.c pgn.c \
 quiesce.c random.c repeat.c search.c solve.c sort.c swap.c test.c \
 ttable.c util.c version.c common.h book.h eval.h inlines.h version.h

DISTCLEANFILES = *~
